# measured

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: build-and-test.yml  publish.yml  test.yml
docs/: astronomical.md  avoirdupois.md  cli.md  energy.md  formatting.md  fundamental.md  geometry.md  iec.md  index.md  natural.md  physics.md  serialization.md  si.md  troy.md  us.md
src/measured/: __init__.py  _measured_parser.py  _parser.py  acoustics.py  apocrypha.py  astronomical.py  avoirdupois.py  cli.py  compat.py  computing.py  constants.py  conversions.py  conversions_v1.py  conversions_v2.py  electronics.py  energy.py  eu.py  fff.py  formatting.py  fundamental.py  geometry.py  hypothesis.py  iec.py  iso.py  json.py  measured.lark  metric.py  music.py  natural.py  parsing.py  physics.py  pytest.py  si.py  systems.py  troy.py  us.py
tests/: performance_harness.py  test_acoustics.py  test_apocrypha.py  test_astronomical.py  test_cli.py  test_computing.py  test_conversions.py  test_dimension.py  test_dimensions.py  test_energy.py  test_eu.py  test_fff.py  test_flyweight.py  test_formatting.py  test_levels.py  test_measurement.py  test_metric.py  test_music.py  test_packaging.py  test_parsing.py  test_performance.py  test_physics.py  test_prefix.py  test_pydantic.py  test_pydantic_and_json.py  test_pytest.py  test_quantities.py  test_quantities_addition.py  test_quantities_multiplication.py  test_quantity.py  test_quantity_addition.py  test_quantity_conversions.py  test_quantity_multiplication.py  test_scales.py  test_serialization.py  test_sqlalchemy.py  test_troy_versus_avoirdupois.py  test_unit.py  test_units.py
tests/iec/: test_bits_and_bytes.py  test_lengths.py
tests/natural/: test_atomic.py  test_natural.py  test_planck.py  test_stoney.py
tests/notebooks/: dimension.ipynb  quantity.ipynb  unit.ipynb
tests/orm/: test_sqlalchemy.py
tests/quantities/: test_addition.py  test_conversions.py  test_decimals.py  test_division.py  test_multiplication.py
tests/si/: test_angles.py  test_base_units.py  test_electromagnetism.py  test_energy_force.py  test_force.py  test_length_area_volume.py  test_lengths_and_areas.py  test_mass.py  test_motion.py  test_temperature.py  test_time.py
tests/us/: test_areas.py  test_energy_force.py  test_fda_nutrition_labeling.py  test_lengths.py  test_lengths_and_areas.py  test_masses.py  test_temperature.py  test_volumes.py
