[metadata]
name = measured
version = attr: measured.__version__
author = Chris Guidry
author_email = chris@theguidrys.us
description = Fast and Pythonic library for working with measurements and quantities
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrisguidry/measured
project_urls =
    Bug Tracker = https://github.com/chrisguidry/measured/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src

[options.package_data]
measured = py.typed

[options.extras_require]
dev =
    black
    build
    flake8
    flake8-black
    isort
    pytest
    pytest-black
    pytest-cov
    pytest-isort
    pytest-mypy
    pytest-flake8
    pytest-xdist
    snakeviz
    tox
    typer
    tuna
    twine
    wheel

[coverage:run]
omit =
    tests/performance_harness.py

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, E741

[mypy]
strict = True

[tool:pytest]
minversion = 7.1
addopts =
    --black
    --isort
    --flake8
    --mypy
    --doctest-modules
    --cov=src
    --cov=tests
    --cov-branch
    --cov-report=term-missing
    --cov-fail-under=100
    --no-cov-on-fail

filterwarnings =
    default

    # warnings from pytest-black
    ignore:<class 'pytest_black.BlackItem'> is not using a cooperative constructor:pytest.PytestDeprecationWarning
    ignore:The \(fspath:pytest.PytestRemovedIn8Warning
    ignore:BlackItem is an Item subclass and should not be a collector:pytest.PytestWarning

    # warnings from pytest-flake8
    ignore:SelectableGroups dict interface is deprecated:DeprecationWarning

[tox:tox]
isolated_build = True
envlist = py311, py310, py39, pypy39, py38, pypy38

[testenv]
deps = -e .[dev]
commands =
    pytest
