[metadata]
name = measured
version = attr: measured.__version__
author = Chris Guidry
author_email = chris@theguidrys.us
description = Fast and Pythonic library for working with measurements and quantities
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrisguidry/measured
project_urls =
    Bug Tracker = https://github.com/chrisguidry/measured/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    typing-extensions; python_version < '3.9'

[options.entry_points]
console_scripts =
    measured = measured.cli:main
pytest11 =
    measured = measured.pytest

[options.packages.find]
where = src

[options.package_data]
measured = py.typed

[options.extras_require]
dev =
    black[jupyter]
    build
    cloudpickle
    flake8
    flake8-black
    hypothesis
    icecream
    isort
    ipython
    jupyter
    lark
    memray; implementation_name=="cpython" and python_version<="3.10"
    mkdocs
    mkdocs-material
    mkdocstrings[python]
    mypy
    pre-commit
    pydantic
    pytest
    pytest-cov
    pytest-xdist
    snakeviz
    sqlalchemy
    tox
    typer
    tuna
    twine
    wheel
    types-sqlalchemy

[coverage:run]
omit =
    src/measured/_parser.py
    src/measured/pytest.py
    tests/performance_harness.py

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, E741
exclude =
    src/measured/_parser.py

[mypy]
strict = True

[mypy-measured.formatting]
disallow_untyped_calls = False

[mypy-tests.test_formatting]
disallow_untyped_calls = False

[mypy-measured._parser]
ignore_errors = True

[mypy-cloudpickle]
ignore_missing_imports = True

[mypy-icecream]
ignore_missing_imports = True

[mypy-IPython.lib.pretty]
ignore_missing_imports = True

[tool:pytest]
minversion = 7.1
addopts =
    -n auto
    --maxprocesses 4
    --doctest-modules
    --cov=src
    --cov=tests
    --cov-branch
    --cov-report=term-missing
    --cov-fail-under=100
    --no-cov-on-fail

filterwarnings =
    default

    # warnings from pytest-black
    ignore:<class 'pytest_black.BlackItem'> is not using a cooperative constructor:pytest.PytestDeprecationWarning
    ignore:The \(fspath:pytest.PytestRemovedIn8Warning
    ignore:BlackItem is an Item subclass and should not be a collector:pytest.PytestWarning

    # warnings from pytest-flake8
    ignore:SelectableGroups dict interface is deprecated:DeprecationWarning

    # warnings from lark-generated parser module
    ignore:module 'sre_parse' is deprecated:DeprecationWarning
    ignore:module 'sre_constants' is deprecated:DeprecationWarning

[tox:tox]
isolated_build = True
envlist = py312, py311, py310, py39, pypy39, py38, pypy38

[testenv]
deps = -e .[dev]
commands =
    pytest --no-cov {posargs}
